--- a/src/views/chatbot/styles/chatbot-styles.css
+++ b/src/views/chatbot/styles/chatbot-styles.css
@@ -45,6 +45,7 @@
 .chat-panel { transform-origin: 100% 50%; }
 .bg-frame { position: fixed; inset: 0; width: 100%; height: 100vh; border: none; z-index: 100; }
 .panel-top { 
+  background-color : transparent !important;
   padding: 0px 0px 0px 0px;
   /* iOS safe area padding for top */
   padding-top: env(safe-area-inset-top, 0px);
@@ -1049,6 +1050,8 @@ html.keyboard-open .panel-footer {
   margin-top: auto;
   display: flex;
   flex-direction: column;
+  flex: 1;
+  min-height: 0;
   /* padding: 0 min(18px, max(15px, env(safe-area-inset-right, 0px))) 0px 0px; */
   position: relative;
   z-index: 100;
