--- a/src/views/chatbot/styles/chatbot-styles.css
+++ b/src/views/chatbot/styles/chatbot-styles.css
@@ -1050,12 +1050,11 @@ html.keyboard-open .panel-footer {
   margin-top: auto;
   display: flex;
   flex-direction: column;
-  flex: 1;
-  min-height: 0;
   /* padding: 0 min(18px, max(15px, env(safe-area-inset-right, 0px))) 0px 0px; */
   position: relative;
   z-index: 100;
   isolation: isolate;
+  width: 100%;
 }
 
 /* When keyboard is open, increase right padding for messages */
